# gsd-control

./: .gitignore  README.md  index.html  main.ts  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: COST-TRACKER-CONTEXT.md  UPDATER-SETUP.md
scripts/: bump-version.sh  gsd-watcher.js  verify-blocks.sh  verify-browser.sh  verify-ci.sh  verify-connection.sh  verify-cost-tracker.sh  verify-cost-widgets.sh  verify-dashboard.sh  verify-debug.sh  verify-explorer.sh  verify-integration.sh  verify-interactions.sh  verify-lifecycle.sh  verify-performance.sh  verify-persistence.sh  verify-sessions.sh  verify-ssh-mux.sh  verify-terminal.sh  verify-updater.sh  verify-watcher.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  ssh.rs  terminal.rs
src/components/: BlockLayout.tsx  BrowserBlock.tsx  CostChart.tsx  Dashboard.tsx  ExplorerBlock.tsx  KeyboardShortcutsHelp.tsx  LogViewer.tsx  SessionCard.tsx  Settings.tsx  Setup.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  TerminalBlock.tsx  TerminalTabs.tsx
src/hooks/: useCostHistory.ts  useDebugLogger.ts  useKeyboardShortcuts.ts  useSSH.ts  useSecrets.ts
src/lib/: costAggregator.ts  debugInvoke.ts  debugLogBuffer.ts  logParser.ts  secrets.ts  shell.ts  terminalStateCache.ts  termwrap.ts  types.ts  watcherScript.ts
src/stores/: appStore.ts
src/styles/: theme.css
